@@ -29,6 +29,9 @@ public class MenuDAO implements IMenuDAO {
             FIND_ALL_MENU_ITEMS = "SELECT * FROM menu",
             FIND_MENU_ITEM_BY_ID = "SELECT item_id FROM menu";
 
+   public MenuDAO() {
+    }
+    
     /**
      * Default Constructor creates a new MenuDAO object.
      *
@@ -38,9 +41,77 @@ public class MenuDAO implements IMenuDAO {
     }
 
     /**
+     * A utility method to explicitly open a db connection. Note that the
+     * connection will remain open until explicitly closed by member methods.
+     *
+     * @param driverClassName - the fully qualified name of the driver class.
+     * @param url - the connection URL, driver dependent.
+     * @param username for database access permission, if required. Null and ""
+     * values are allowed.
+     * @param password for database access permission, if required. Null and ""
+     * values are allowed
+     * @throws IllegalArgumentException if url is null or zero length
+     * @throws ClassNotFoundException if driver class cannot be found
+     * @throws SQLException if database access error occurs. For example, an
+     * invalitemId url could cause this; or, a database that is no longer available
+     * due to network or access permission problems.
+     */
+    private void openDBConnection() throws DataAccessException {
+        try {
+            db.openDBConnection(DRIVER_CLASS, URL, USERNAME, PASSWORD);
+        } catch (SQLException sql) {
+            throw new DataAccessException(sql.getLocalizedMessage());
+        } catch (Exception e) {
+            throw new DataAccessException(e.getLocalizedMessage());
+        }
+    }
+    
+    @Override
+    public void saveMenuItem(MenuItem menuItem) throws DataAccessException {
+
+        this.openDBConnection();
+
+        List<String> colDescriptors = new ArrayList<String>();
+        colDescriptors.add(ITEM_NAME);
+        colDescriptors.add(ITEM_PRICE);
+
+        List colValues = new ArrayList();
+        colValues.add(menuItem.getItemName());
+        colValues.add(menuItem.getItemPrice());
+
+        try {
+            // if the itemId is null, it's a new record, else it's an update
+            if (menuItem.getId() == null) {
+                db.insertRecord(TABLE, colDescriptors, colValues, true);
+            } else {
+                db.updateRecords(TABLE, colDescriptors, colValues, ITEM_ID,
+                        menuItem.getId(), true);
+            }
+        } catch (SQLException sql) {
+            throw new DataAccessException(sql.getLocalizedMessage());
+            // NOTE: Need to use a better exception
+        } catch (Exception e) {
+            throw new DataAccessException(e.getLocalizedMessage());
+        }
+    }
+    
+    @Override
+    public void deleteMenuItem(MenuItem menuItem) throws DataAccessException {
+        this.openDBConnection();
+
+        try {
+            db.deleteRecords(TABLE, ITEM_ID, menuItem.getId(), true);
+        } catch (SQLException sql) {
+            throw new DataAccessException(sql.getLocalizedMessage());
+        } catch (Exception e) {
+            throw new DataAccessException(e.getLocalizedMessage());
+        }
+    }
+    
+    /**
      * Returns the list of all menu items.
      *
-     * @return menuItems : The value of the private variable that identifies the
+     * @return menuItems : The value of the private variable that itemIdentifies the
      * menu items. Defaults to null if no value is passed in.
      */
     @Override
@@ -61,8 +132,8 @@ public class MenuDAO implements IMenuDAO {
 
         for (Map map : rawData) {
             menuItem = new MenuItem();
-            String itemId = map.get("item_id").toString();
-            menuItem.setId(Long.valueOf(itemId));
+            String itemId = map.get(ITEM_ID).toString();
+            menuItem.setId(new Long(itemId));
             String name = map.get(ITEM_NAME).toString();
             menuItem.setItemName(name);
             String price = map.get(ITEM_PRICE).toString();
@@ -78,7 +149,7 @@ public class MenuDAO implements IMenuDAO {
 
         try {
             this.openDBConnection();
-            rawData = db.findRecordById(TABLE, ITEM_ID, ID, true);
+            rawData = db.findRecordById(TABLE, PK_FIELD, ID, true);
         } catch (SQLException sql) {
             throw new DataAccessException(sql.getLocalizedMessage());
             // NOTE: Need to use a better exception
@@ -87,99 +158,14 @@ public class MenuDAO implements IMenuDAO {
         }
 
         MenuItem menuItem = new MenuItem();
-        String itemId = rawData.get("item_id").toString();
-        menuItem.setId(new Long(itemId));
-        System.out.println("getmenuitembyid Id: " + itemId);
+        String id = rawData.get(ITEM_ID).toString();
+        menuItem.setId(new Long(id));
         String itemName = rawData.get(ITEM_NAME).toString();
         menuItem.setItemName(itemName);
         String itemPrice = rawData.get(ITEM_PRICE).toString();
         menuItem.setItemPrice(new Double(itemPrice));
 
         return menuItem;
-    }
-
-    @Override
-    public void deleteMenuItem(MenuItem menuItem) throws DataAccessException {
-        this.openDBConnection();
-
-        try {
-            db.deleteRecords(TABLE, ITEM_ID, menuItem.getId(), true);
-        } catch (SQLException sql) {
-            throw new DataAccessException(sql.getLocalizedMessage());
-        } catch (Exception e) {
-            throw new DataAccessException(e.getLocalizedMessage());
-        }
-    }
-
-    @Override
-    public void saveMenuItem(MenuItem menuItem) throws DataAccessException {
-
-        this.openDBConnection();
-
-        List<String> colDescriptors = new ArrayList<String>();
-        colDescriptors.add(ITEM_NAME);
-        colDescriptors.add(ITEM_PRICE);
-
-        List colValues = new ArrayList();
-        colValues.add(menuItem.getItemName());
-        colValues.add(menuItem.getItemPrice());
-
-        try {
-            // if the id is null, it's a new record, else it's an update
-            if (menuItem.getId() == null) {
-                System.out.println("Menu Id = NULL");
-                db.insertRecord(TABLE, colDescriptors, colValues, true);
-            } else {
-                Long id = Long.valueOf(menuItem.getId());
-                db.updateRecords(TABLE, colDescriptors, colValues, ITEM_ID,
-                        id, true);
-            }
-        } catch (SQLException sql) {
-            throw new DataAccessException(sql.getLocalizedMessage());
-            // NOTE: Need to use a better exception
-        } catch (Exception e) {
-            throw new DataAccessException(e.getLocalizedMessage());
-        }
-    }
-
-    /**
-     * A utility method to explicitly open a db connection. Note that the
-     * connection will remain open until explicitly closed by member methods.
-     *
-     * @param driverClassName - the fully qualified name of the driver class.
-     * @param url - the connection URL, driver dependent.
-     * @param username for database access permission, if required. Null and ""
-     * values are allowed.
-     * @param password for database access permission, if required. Null and ""
-     * values are allowed
-     * @throws IllegalArgumentException if url is null or zero length
-     * @throws ClassNotFoundException if driver class cannot be found
-     * @throws SQLException if database access error occurs. For example, an
-     * invalid url could cause this; or, a database that is no longer available
-     * due to network or access permission problems.
-     */
-    private void openDBConnection() throws DataAccessException {
-        try {
-            db.openDBConnection(DRIVER_CLASS, URL, USERNAME, PASSWORD);
-        } catch (SQLException sql) {
-            throw new DataAccessException(sql.getLocalizedMessage());
-        } catch (Exception e) {
-            throw new DataAccessException(e.getLocalizedMessage());
-        }
-    }
-
-    /**
-     * A utility method to explicitly close a db connection. Pooled connections
-     * should never be closed, but rather returned to the pool.
-     * <p>
-     * As an alternative to using this method, other member methods is this
-     * class offer a boolean switch to close the connection automatically.
-     *
-     * @throws SQLException if connection cannot be closed due to a db access
-     * error.
-     */
-    public void closeDBConnection() throws SQLException {
-        db.closeDBConnection();
     }
 
     public final DBAccessor getDb() {
@@ -202,30 +188,35 @@ public class MenuDAO implements IMenuDAO {
         for (MenuItem m : allMenuItems) {
             System.out.println(m.getItemName() + " ... " + m.getItemPrice());
         }
-        // get by id
+        // get by itemId
         String[] orderedMenuItems = {"5"};
         List<MenuItem> mi = new ArrayList<>();
         for (String s : orderedMenuItems) {
             MenuItem m = dao.getMenuItemById(s);
             mi.add(m);
-            System.out.println("\nRetrieved menu item by id: " + m.getItemName() + " ... " + m.getItemPrice());
+            System.out.println("\nRetrieved menu item by itemId: " 
+                    + m.getItemName() + "(" + m.getId() + ") ... " + m.getItemPrice());
         }
         // delete
-        menuItem = new MenuItem(Long.valueOf(8), "Mixed Drink", 7.00);
-        dao.deleteMenuItem(menuItem);
-        System.out.println("\nDeleted item: " + menuItem.getItemName() + " ... " + menuItem.getItemPrice());
+        MenuItem miDeletable = dao.getMenuItemById("35");
+        dao.deleteMenuItem(miDeletable);
+        System.out.println("\nDeleted item: " + miDeletable.getItemName() 
+                + " ... " + miDeletable.getItemPrice());
 
         // insert
         menuItem = new MenuItem(null, "Mixed Drink", 7.25);
         dao.saveMenuItem(menuItem);
-        System.out.println("\nInserted: " + menuItem.getItemName() + " @$" + menuItem.getItemPrice());
+        System.out.println("\nInserted: " + menuItem.getItemName() + " @ $" 
+                + menuItem.getItemPrice());
 
         // update
-        menuItem = new MenuItem(Long.valueOf("6"), "Rice Pilaf", 3.75);
-        dao.saveMenuItem(menuItem);
-        System.out.println("\nUpdated: " + menuItem.getItemName() + " ( " + menuItem.getId() + ")"
-                + " ... " + menuItem.getItemPrice());
-
+        MenuItem miUpdateable = dao.getMenuItemById("6");
+        if (miUpdateable != null) {
+        miUpdateable.setItemPrice(3.75);
+        dao.saveMenuItem(miUpdateable);
+        System.out.println("\nUpdated: " + miUpdateable.getItemName() + " ( " 
+                    + Long.valueOf(miUpdateable.getId()) + ") ... " + miUpdateable.getItemPrice());
+        }
         //get MENU
         System.out.println(
                 "\n ... CURRENT MENU ... ");
